fix code update image

--- a/views/dashboard/update-post.ejs
+++ b/views/dashboard/update-post.ejs
@@ -152,48 +152,72 @@
 		    var formData = new FormData();
             formData.append('image', _imagePost);
 
-            $.ajax({
-                url: "https://api.imgur.com/3/image",
-                type: "POST",
-                datatype: "json",
-                headers: {
-                "Authorization": "Client-ID 1059a795be32ee2"
-                },
-                data: formData,
-                success: function(response) {
-                    console.log({ response });
+            if(_imagePost){
+                $.ajax({
+                    url: "https://api.imgur.com/3/image",
+                    type: "POST",
+                    datatype: "json",
+                    headers: {
+                    "Authorization": "Client-ID 1059a795be32ee2"
+                    },
+                    data: formData,
+                    success: function(response) {
+                        console.log({ response });
 
-                    var photo = response.data.link;
-                    var photo_hash = response.data.deletehash;
+                        var photo = response.data.link;
+                        var photo_hash = response.data.deletehash;
 
-                    console.log({ image: photo, title, shortDesc, category, content });
+                        console.log({ image: photo, title, shortDesc, category, content });
 
-                    if(!title || !content){
-                        return toastr.info('Vui lòng nhập đây đủ!')
-                    } else{
-                        $.ajax({
-                            url: `/blog/update/${blogID}`,
-                            method: 'POST',
-                            data: { image: photo, title, shortDesc, category, content },
-                            success: resp => {
-                                console.log({ resp })
-                                if(!resp.error){
-                                    toastr['success']('Cập nhật bài viết thành công', 'Thông báo');
-                                    setTimeout(() => {
-                                        location.href = `/dashboard`
-                                    }, 500);
-                                }else{
-                                    return toastr['error']('Cập nhật bài viết thất bại', 'Thông báo');
-                                }
-                            },
-                            error: err => console.log({ err })
-                        });
-                    }
-                },
-                cache: false,
-                contentType: false,
-                processData: false
-            });
+                        if(!title || !content){
+                            return toastr.info('Vui lòng nhập đây đủ!')
+                        } else{
+                            $.ajax({
+                                url: `/blog/update/${blogID}`,
+                                method: 'POST',
+                                data: { image: photo, title, shortDesc, category, content },
+                                success: resp => {
+                                    console.log({ resp })
+                                    if(!resp.error){
+                                        toastr['success']('Cập nhật bài viết thành công', 'Thông báo');
+                                        setTimeout(() => {
+                                            location.href = `/dashboard`
+                                        }, 500);
+                                    }else{
+                                        return toastr['error']('Cập nhật bài viết thất bại', 'Thông báo');
+                                    }
+                                },
+                                error: err => console.log({ err })
+                            });
+                        }
+                    },
+                    cache: false,
+                    contentType: false,
+                    processData: false
+                });
+            }else{
+                if(!title || !content){
+                    return toastr.info('Vui lòng nhập đây đủ!')
+                } else{
+                    $.ajax({
+                        url: `/blog/update/${blogID}`,
+                        method: 'POST',
+                        data: { title, shortDesc, category, content },
+                        success: resp => {
+                            console.log({ resp })
+                            if(!resp.error){
+                                toastr['success']('Cập nhật bài viết thành công', 'Thông báo');
+                                setTimeout(() => {
+                                    location.href = `/dashboard`
+                                }, 500);
+                            }else{
+                                return toastr['error']('Cập nhật bài viết thất bại', 'Thông báo');
+                            }
+                        },
+                        error: err => console.log({ err })
+                    });
+                }
+            }
 
             // if(!title || !content){
             //     return toastr.info('Vui lòng nhập đủ!')
