update title hide

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -20,7 +20,7 @@
                                 <h3>I am a <strong>IT Business Analyst</strong> <strong>Fullstack Developer</strong></h3>
                                 
                                 <figure>
-                                	<a href="/about-me"><img src="/template/images/site/about_me.jpg" alt="About Me"></a>
+                                	<a href="/blog/62b9d312bef55b7a0c83084e"><img src="/template/images/site/about_me.jpg" alt="About Me"></a>
                                     <figcaption class="wp-caption-text">About Me</figcaption>
                                 </figure>        
                                 <% CATEGORY.forEach(category => { %>
