--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -134,43 +134,45 @@
         <div class="post-thumbnail" style="background-image:url(<%=infoBlog.image%>)">
                                   
             <!-- .entry-header -->
-            <header class="entry-header">
-                
-                                
-                <!-- .entry-meta -->
-                <% if (infoBlog.category != 0) { %>
-                 
-                <div class="entry-meta">
-                    <span class="cat-links">
-                        <a href="#" title="View all posts in Travel" rel="category tag">
-                            <% CATEGORY.forEach(category => { %>
-                                <% if (category.id == infoBlog.category) { %>
-                                      <%=category.title%> 
-                                <% } %>
-                            <% }) %>
-                        </a>
-                    </span>	
-                </div>
+            <% if (!infoBlog.hideTitle) { %>
+                <header class="entry-header">
+                    
+                                    
+                    <!-- .entry-meta -->
+                    <% if (infoBlog.category != 0) { %>
+                    
+                    <div class="entry-meta">
+                        <span class="cat-links">
+                            <a href="#" title="View all posts in Travel" rel="category tag">
+                                <% CATEGORY.forEach(category => { %>
+                                    <% if (category.id == infoBlog.category) { %>
+                                        <%=category.title%> 
+                                    <% } %>
+                                <% }) %>
+                            </a>
+                        </span>	
+                    </div>
 
-                <% } %>
+                    <% } %>
 
-                <!-- .entry-meta -->
-                
-                <!-- .entry-title -->
-                <h1 class="entry-title"><%=infoBlog.title %> </h1>
-                                
-                <!-- .entry-meta -->
-                <div class="entry-meta">
-                    <span class="entry-date">
-                        <time class="entry-date" datetime="2014-07-13T04:34:10+00:00"><%=moment(infoBlog.createAt).format('LL'); %> </time>
-                    </span> 
-                    <span class="comment-link">
-                        <a href="#comments"><%=infoBlog.views%> Lượt xem</a>
-                    </span>
-                </div>
-                <!-- .entry-meta -->
-                
-            </header>
+                    <!-- .entry-meta -->
+                    
+                    <!-- .entry-title -->
+                    <h1 class="entry-title"><%=infoBlog.title %> </h1>
+                                    
+                    <!-- .entry-meta -->
+                    <div class="entry-meta">
+                        <span class="entry-date">
+                            <time class="entry-date" datetime="2014-07-13T04:34:10+00:00"><%=moment(infoBlog.createAt).format('LL'); %> </time>
+                        </span> 
+                        <span class="comment-link">
+                            <a href="#comments"><%=infoBlog.views%> Lượt xem</a>
+                        </span>
+                    </div>
+                    <!-- .entry-meta -->
+                    
+                </header>
+            <% } %>
             <!-- .entry-header -->
             
         </div>
