--- a/views/dashboard/home.ejs
+++ b/views/dashboard/home.ejs
@@ -252,9 +252,9 @@ input:checked + .slider:before {
                                                                     </td>
                                                                     <td><%=moment(blog.createAt).format('L'); %></td>
                                                                     <td>
-                                                                        <!-- <a href="/blog/remove/<%=blog._id%>" class="btn btn-outline-secondary btn-sm btnRemove" title="Xóa">
+                                                                        <a href="/blog/remove/<%=blog._id%>" class="btn btn-outline-secondary btn-sm btnRemove" title="Xóa">
                                                                             <i class="fas fa-trash-alt"></i>
-                                                                        </a> -->
+                                                                        </a>
                                                                         <a href="/blog/update/<%=blog._id%>" style="margin-left: 10px;" class="btn btn-outline-secondary btn-sm btnEdit" title="Chỉnh sửa">
                                                                             <i class="fas fa-pencil-alt"></i>
                                                                         </a>
