--- a/public/template/category_temp.html
+++ b/public/template/category_temp.html
@@ -13,68 +13,84 @@
           <!-- site-content -->
           <div id="content" class="site-content" role="main">
               <!-- BLOG LIST -->
-              <header style="margin-top: -3em;" class="entry-header">
-                <h1 class="entry-title"><i>Posts in</i> 
-                  <span class="cat-title">
-                    <%let abc = categoryID%>
-                    <% CATEGORY.forEach(category => { %>
-                      <% if (category.id == abc) { %>
-                            <%=category.title%> 
-                      <% } %>
-                  <% }) %>               
-                  </span>
-                </h1>
-              </header>
-
-              <div class="media-grid-wrap">
-                <div class="masonry blog-masonry blog-stream tablet-view" data-layout="masonry" data-mobile-item-width="220" data-item-width="420" style="width: 874.203px; position: relative; height: 1261.74px;">       
+              <div class="blog-bold blog-stream">
+                  <!-- post -->
                   <% if (products && products.length) { %>
                     <%products.forEach(blog => {%> 
-
-                    <article class="hentry post has-post-thumbnail slideUp animated" style="position: absolute; left: 0px; top: 0px; width: 49.9884%; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
-                        <!-- .featured-image -->
-                        <div class="featured-image">
-                            <a href="/blog/<%=blog._id%>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
+                      <article class="hentry has-post-thumbnail slideUp">
+                        <div class="post-thumbnail" style=" background-image:url(<%=blog.image%>)">
+                            <header class="entry-header">
+                                <div class="entry-meta">
+                                    <span class="cat-links">
+                                        <a href="#" title="View all posts in Life" rel="category tag">
+                                          <% CATEGORY.forEach(category => { %>
+                                              <% if (category.id == blog.category) { %>
+                                                    <%=category.title%> 
+                                              <% } %>
+                                          <% }) %>
+                                        </a>
+                                    </span>
+                                </div>
+                                <h2 class="entry-title"><a href="/blog/<%=blog._id%>"><%=blog.title%></a></h2>
+                                <div class="entry-meta">
+                                    <span class="entry-date">
+                                        <time class="entry-date" datetime="2014-07-13T04:34:10+00:00"><%=moment(blog.createAt).format('LL'); %></time>
+                                    </span>
+                                    <span class="comment-link">
+                                        <a href="#comments"><%=blog.views%> Lượt xem</a>
+                                    </span>
+                                </div>
+                                <p><a href="/blog/<%=blog._id%>" class="more-link">Xem bài viết</a></p>
+                            </header>
                         </div>
-                        
-                        <header class="entry-header">
-                            
-                            <!-- .entry-title -->
-                            <h2 class="entry-title"><a href="/blog/<%=blog._id%>"><%=blog.title%></a></h2>
-                            
-                            <!-- .entry-meta -->
-                            <div class="entry-meta">
-                                <span class="cat-links">
-                                    <a href="#" title="View all posts in Adventure" rel="category tag">
-                                      <% CATEGORY.forEach(category => { %>
-                                        <% if (category.id == blog.category) { %>
-                                              <%=category.title%> 
-                                        <% } %>
-                                    <% }) %>
-                                    </a>
-                                </span>	
-                                <span class="entry-date">
-                                    <time class="entry-date" datetime=""><%=moment(blog.createAt).format('LL'); %></time>
-                                </span>    
-                                <span>
-                                    <a href="/blog/<%=blog._id%>"><%=blog.views%> Lượt xem</a>
-                                </span>
-                            </div>
-                        </header>
-                        
-                        <!-- .entry-content -->
-                        <div class="entry-content">
-                          <p><%=blog.shortDesc ? blog.shortDesc.slice(0, 190).concat('...') : `Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description...` %> 
-                              <span class="more">
-                                  <a href="/blog/<%=blog._id %>" class="more-link">Đọc thêm</a>
-                              </span>
-                          </p>
-                      
-                        </div>
-                        <!-- .entry-content -->
-                        
-                        
                     </article>
+                    <article class="hentry post has-post-thumbnail slideUp">
+                                
+                      <!-- .featured-image -->
+                      <div class="featured-image">
+                          <a href="blog-single.html" title="A Story About Knowing The Value Of Simplicity"><img src="<%=blog.image%>" alt="blog-image"></a>
+                      </div>
+                      
+                      <!-- .hentry-middle -->
+                      <div class="hentry-middle">
+                      
+                          <!-- .entry-header -->
+                          <header class="entry-header">
+                              
+                              <!-- .entry-meta -->
+                              <div class="entry-meta">
+                                  <span class="cat-links">
+                                      <a href="#" title="View all posts in Adventure" rel="category tag">LIFE</a>
+                                  </span>	
+                                  <span class="entry-date">
+                                      <time class="entry-date" datetime="2014-07-13T04:34:10+00:00">June 7, 2014</time>
+                                  </span>   
+                                  <span class="comment-link">
+                                      <a href="">12 Comments</a>
+                                  </span>
+                              </div>
+                              <!-- .entry-meta -->
+                              
+                              <!-- .entry-title -->
+                              <h2 class="entry-title"><a href="blog-single.html" title="Stop Worrying About How Pretty It is">Mastering Portrait Photography</a></h2>
+                              
+                          </header>
+                          <!-- .entry-header -->
+                          
+                          <!-- .entry-content -->
+                          <div class="entry-content">
+                                                              
+                              <p>All I've got to do is pass as an ordinary human being. Simple. What could possibly go wrong? Stop talking, brain thinking. Hush. I hate yogurt. It's just stuff with bits in. I'm nobody's taxi..
+                                  <span class="more">
+                                      <a href="blog-single.html" class="more-link">Read More</a>
+                                  </span>
+                              </p>
+                             
+                          </div>
+                          <!-- .entry-content -->
+                      </div>
+                      <!-- .hentry-middle -->
+                  </article>
                     <%})%>
                   <% }else{%>
                     <div style="text-align: center; padding-top: 40px;">
@@ -82,9 +98,8 @@
                       <p style="font-size: large; color: rgb(82, 82, 82);">Sorry!! Không tìm thấy bài viết nào</p>
                     </div>
                   <% } %>
-                    
-                </div>
               </div>
+            <!-- BLOG BOLD --> 
 
               <!-- post pagination -->
               <% if (pages > 0) { %>
@@ -191,11 +206,3 @@
   </div>
 </div>
 <%- include ('./footer.ejs') %>
-
-<script>
-  $( window ).load(function() {
-    let categoryID = "<%=categoryID%>"
-    console.log({ categoryID });
-    $(`.menu-${categoryID}`).find('a').css("color", "orange");
-  });
-</script>
