--- a/views/dashboard/home.ejs
+++ b/views/dashboard/home.ejs
@@ -151,9 +151,9 @@ input:checked + .slider:before {
                                     <div class="card-body">
                                         <div class="row align-items-center">
                                             <div class="col-6">
-                                                <span class="text-muted mb-3 lh-1 d-block text-truncate">User</span>
+                                                <span class="text-muted mb-3 lh-1 d-block text-truncate">Người đăng ký</span>
                                                 <h4 class="mb-3">
-                                                    <span class="counter-value" data-target="4"></span> user
+                                                    <span class="counter-value" data-target="<%=totalCustomerRegister || 0%>"></span> user
                                                 </h4>
                                             </div>
                                             <div class="col-6">
