--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -220,16 +220,16 @@
                         <!-- .entry-content -->
                             
                              <!-- .post-tags -->
-                             <div class="post-tags tagcloud">
+                             <!-- <div class="post-tags tagcloud">
                                 <a href="#" rel="tag">ITBA</a>
                                 <a href="#" rel="tag">laptrinh</a>
                                 <a href="#" rel="tag">blog</a>
-                             </div>
+                             </div> -->
                              <!-- .post-tags -->
                             
                              
                              <!-- .share-links -->
-                             <div class="share-links">
+                             <!-- <div class="share-links">
                                 
                                 <h3>CHIA SẺ LÊN</h3>
                                                                 
@@ -241,10 +241,10 @@
                                 
                                 <a rel="nofollow" target="_blank" href="https://plus.google.com/share?url=http://themes.pixelwars.org/editor-html/blog-single.html" title="Share this post on Google+"><i class="pw-icon-gplus"></i></a>
                                 
-                             </div>
+                             </div> -->
                              <!-- .share-links -->
 
-                             <nav class="nav-single row">
+                             <!-- <nav class="nav-single row">
                                 <% if (previousPost) { %>
                                     <div class="nav-previous col-xs-6">
                                         <h4>Xem bài trước</h4>
@@ -258,49 +258,45 @@
                                         <a href="/blog/<%=nextPost._id%>" rel="next"><%=nextPost.title %> </a>
                                     </div>
                                 <% } %>
-                            </nav>
+                            </nav> -->
 
-                            <!-- <div id="comments" class="comments-area">
+                            <div id="comments" class="comments-area">
                               
                                 <div id="respond">
+                                    <h3 id="reply-title">ĐỂ LẠI BÌNH LUẬN CỦA BẠN <small><a rel="nofollow" id="cancel-comment-reply-link" href="#" style="display:none;">Cancel reply</a></small></h3>
+                                    
+                                    <!-- .commentform -->
+                                    <form action="#" method="post" id="commentform" class="validate-form" novalidate="novalidate">
+                                    
+                                      <p class="comment-notes">Your email address will not be published. Required fields are marked <span class="required" aria-required="true">*</span></p>
+                                      
+                                      <p class="comment-form-comment">
+                                        <label for="comment">Nhận xét</label>
+                                        <textarea id="comment" name="comment" rows="8" aria-required="true" class="required"></textarea>
+                                      </p>
+                                      
+                                      <p class="comment-form-author">
+                                        <label for="author">Tên của bạn <span class="required" aria-required="true">*</span></label>
+                                        <input id="nameCustomer" name="author" type="text" size="30" aria-required="true" class="required">
+                                      </p>
+                                      
+                                      <p class="comment-form-email">
+                                        <label for="email">Email <span class="required" aria-required="true">*</span></label>
+                                        <input id="emailCustomer" name="email" type="text" size="30" aria-required="true" class="required email">
+                                      </p>
+                                      
+                                      <p class="form-allowed-tags">You may use these <abbr title="HyperText Markup Language">HTML</abbr> tags and attributes: <code>&lt;a href="" title=""&gt; &lt;abbr title=""&gt; &lt;acronym title=""&gt; &lt;b&gt; &lt;blockquote cite=""&gt; &lt;cite&gt; &lt;code&gt; &lt;del datetime=""&gt; &lt;em&gt; &lt;i&gt; &lt;q cite=""&gt; &lt;strike&gt; &lt;strong&gt; </code></p>
+                                      
+                                      <p class="form-submit">
+                                        <input type="submit" name="submit" id="btnComment" class="button primary" value="Bình luận">
+                                      </p>
+                                      
+                                    </form>
+                                    <!-- .commentform -->
+                                    
+                                  </div>
                                 
-                                  <h3 id="reply-title">Để lại trả lời  <small><a rel="nofollow" id="cancel-comment-reply-link" href="#" style="display:none;">Cancel reply</a></small></h3>
-                                  
-                                  <form action="#" method="post" id="commentform" class="validate-form" novalidate="novalidate">
-                                  
-                                    <p class="comment-notes">Your email address will not be published. Required fields are marked <span class="required" aria-required="true">*</span></p>
-                                    
-                                    <p class="comment-form-comment">
-                                      <label for="comment">Comment</label>
-                                      <textarea id="comment" name="comment" rows="8" aria-required="true" class="required"></textarea>
-                                    </p>
-                                    
-                                    <p class="comment-form-author">
-                                      <label for="author">Name <span class="required" aria-required="true">*</span></label>
-                                      <input id="author" name="author" type="text" size="30" aria-required="true" class="required">
-                                    </p>
-                                    
-                                    <p class="comment-form-email">
-                                      <label for="email">Email <span class="required" aria-required="true">*</span></label>
-                                      <input id="email" name="email" type="text" size="30" aria-required="true" class="required email">
-                                    </p>
-                                    
-                                    <p class="comment-form-url">
-                                      <label for="url">Website</label>
-                                      <input id="url" name="url" type="text" size="30">
-                                    </p>
-                                    
-                                    <p class="form-allowed-tags">You may use these <abbr title="HyperText Markup Language">HTML</abbr> tags and attributes: <code>&lt;a href="" title=""&gt; &lt;abbr title=""&gt; &lt;acronym title=""&gt; &lt;b&gt; &lt;blockquote cite=""&gt; &lt;cite&gt; &lt;code&gt; &lt;del datetime=""&gt; &lt;em&gt; &lt;i&gt; &lt;q cite=""&gt; &lt;strike&gt; &lt;strong&gt; </code></p>
-                                    
-                                    <p class="form-submit">
-                                      <input type="submit" name="submit" id="submit" class="button primary btnComment" value="SUBMIT">
-                                    </p>
-                                    
-                                  </form>
-                                  
-                                </div>
-                                
-                            </div> -->
+                            </div>
                     </article>
             </div>
             <!-- site-content -->
@@ -316,6 +312,7 @@
 
 <script>
     $(document).ready(function(){
+
         let blogID = `<%=infoBlog._id%>`;
         $.ajax({
             url: `/blog/info/${blogID}`,
@@ -325,15 +322,46 @@
                 if(!resp.error){
                     $('.content-ckeditor').append(infoBlog.content)
                 }else{
-                    return toastr['error']('Thêm thất bại', 'Thông báo');
+                    return toastr['error']('Đã xảy ra lỗi', 'Thông báo');
                 }
             },
             error: err => console.log({ err })
         });
 
-        $(document).on('click', '.btnComment', function(e) {
+        $(document).on('click', '#btnComment', function(e) {
             e.preventDefault();
-            return toastr['warning']('Tính năng này đang được phát triển', 'Thông báo');
+            var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+
+            let name = $("#nameCustomer").val();
+            let email = $("#emailCustomer").val();
+            let questionContent = $("#comment").val();
+
+            if(!email.match(mailformat))
+            {
+                return toastr['warning']('Email không hợp lệ', 'Thông báo');
+            }
+
+            $.ajax({
+                url: `/user/register-customer`,
+                method: 'POST',
+                data: {name, email, questionContent},
+                success: resp => {
+                    //console.log({ resp });
+                    if(!resp.error){
+                        toastr['success']('Bình luận của bạn đã được gửi đi.', 'Xin Cảm ơn ^^');
+                        setTimeout(() => {
+                            return toastr['success']('Bạn sẽ nhận được email sớm nhất từ tôi.', 'Thông báo');
+                        }, 5000);
+                    }else{
+                        return toastr['error']('Đã xảy ra lỗi', 'Thông báo');
+                    }
+                },
+                error: err => console.log({ err })
+            });
+
+            return console.log({ nameCustomer,emailCustomer, comment });
+
+            //return toastr['warning']('Tính năng này đang được phát triển', 'Thông báo');
         });
     })
     
