--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -43,6 +43,15 @@
     
 	<!-- INITIAL SCRIPTS -->
 	<script src="/template/js/modernizr.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRSBJ4DT7Q"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-BRSBJ4DT7Q');
+    </script>
 
 </head>
 
