add google adsen

--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -54,6 +54,7 @@
 
         gtag('config', 'G-BRSBJ4DT7Q');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6866668022954049" crossorigin="anonymous"></script>
 
 </head>
 
