--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -42,13 +42,13 @@
                                 <article class="hentry post has-post-thumbnail slideUp" style="position: absolute; left: 0px; top: 0px; width: 49.8947%; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                                     <!-- .featured-image -->
                                     <div class="featured-image">
-                                        <a href="/blog/<%=blog._id %>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
+                                        <a href="/blog/bai-viet/<%=blog.slug %>"><img style="flex-shrink: 0; min-width: 100%; max-height: 240px; object-fit: cover;" width="1440" height="1440" src="<%=blog.image%>" alt="blog-image"></a>
                                     </div>
                                     
                                     <header class="entry-header">
                                         
                                         <!-- .entry-title -->
-                                        <h2 class="entry-title"><a href="/blog/<%=blog._id %>"><%=blog.title%></a></h2>
+                                        <h2 class="entry-title"><a href="/blog/bai-viet/<%=blog.slug %>"><%=blog.title%></a></h2>
                                         
                                         
                                         <!-- .entry-meta -->
@@ -66,7 +66,7 @@
                                                 <time class="entry-date" datetime=""><%=moment(blog.createAt).format('L'); %></time>
                                             </span>    
                                             <span>
-                                                <a href="/blog/<%=blog._id %>"><%=blog.views%> Lượt xem</a>
+                                                <a href="/blog/bai-viet/<%=blog.slug %>"><%=blog.views%> Lượt xem</a>
                                             </span>
                                         </div>
                                         <!-- .entry-meta -->
@@ -79,14 +79,11 @@
                                     <div class="entry-content">
                                         <p><%=blog.shortDesc ? blog.shortDesc.slice(0, 190).concat('...') : `Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description Ở đây sẽ hiện short description...` %> 
                                             <span class="more">
-                                                <a href="/blog/<%=blog._id %>" class="more-link">Đọc thêm</a>
+                                                <a href="/blog/bai-viet/<%=blog.slug %>" class="more-link">Đọc thêm</a>
                                             </span>
                                         </p>
-                                    
                                     </div>
                                     <!-- .entry-content -->
-                                    
-                                    
                                 </article>
                                 <% }) %>
                             </div>
