--- a/public/template/css/main.css
+++ b/public/template/css/main.css
@@ -137,7 +137,8 @@ h1 {
  	font-size: 1.6em; margin: 0.8em 0 0.8em 0; line-height: 1.2;
 	}
 h2 {
- 	font-size: 1.1em; line-height: 1.3; text-transform: uppercase;
+ 	font-size: 1.1em; line-height: 1.3; 
+	/* text-transform: uppercase; */
 	}
 h3,
 h4,
