--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -59,6 +59,10 @@
 </head>
 
 <style>
+    h2{
+        text-transform: none !important; 
+    }
+
     .entry-content img {
         display: block;
         margin-right: auto;
