change css final

--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -56,6 +56,11 @@
 
 
 </head>
+<style>
+    .header-light .site-header a.social-link {
+        color: #555 !important;
+    }
+</style>
 
 <body class="">
 
