change css final 2

--- a/views/pages/info-post.ejs
+++ b/views/pages/info-post.ejs
@@ -69,6 +69,9 @@
         margin-left: auto;
         object-fit: contain;
     }
+    .header-light .site-header a.social-link {
+        color: #555 !important;
+    }
 </style>
 
 <body class="">
